# StellarTrust-Protocol

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: deploy-mainnet.yml  deploy-testnet.yml  test.yml
\.github/workflows/: deploy-mainnet.yml  deploy-testnet.yml
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/tests/: helpers.ts
contracts/: Cargo.toml  Makefile
contracts/credit-score/: Cargo.toml  README.md
contracts/governance/: Cargo.toml  README.md
contracts/identity/: Cargo.toml  README.md
contracts/identity/src/: attestation.rs  credentials.rs  did.rs  errors.rs  lib.rs  registry_check.rs
contracts/identity/test_snapshots/tests/: test_add_credential_from_untrusted_issuer_fails.1.json  test_add_credential_succeeds.1.json  test_attestation_from_trusted_issuer_succeeds.1.json  test_create_did_sets_timestamps.1.json  test_create_did_succeeds.1.json  test_duplicate_did_is_rejected.1.json  test_revoke_credential_succeeds.1.json  test_revoke_nonexistent_credential_fails.1.json
docs/: api-reference.md  architecture.md  did-spec.md  integration-guide.md  scoring-model.md
frontend/: .env.example  Dockerfile  next.config.js  package.json  vitest.config.ts
nginx/: nginx.prod.conf
scripts/: deploy-contracts.sh  migrate-db.sh  seed-issuers.ts
sdk/: README.md  package.json
(+88 files in other folders)
